# rag-kit

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py
research/: trials.ipynb
src/: helper.py
templates/: chat.html
